welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:17: error: ')' expected but 'return' found.
return true }        
^