welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
avance()

if (getCouleurSol()==Color.green && estFaceMur()==false){	
 recule()
baisseBrosse()
avance()
leveBrosse()
avance()
} else if (getCouleurSol()==Color.green && estFaceMur()==true{
recule()
gauche()
avance() }
// Write your code here

return true }        
